[package]
name = "gambl"
version = "0.1.0"
authors = ["Julian Laubstein <contact@julianlaubstein.de>"]

[lib]
name = "gambl_core"
path = "core/lib.rs"

[[bin]]
name = "gambl"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rust-crypto = "0.2.36"
serde = "1.0.10"
serde_derive = "1.0.10"
error-chain = "0.10.0"
rmp-serde = "0.13.3"
